--- a/BookShare.Infra.Data/BookShare.Infra.Data.csproj
+++ b/BookShare.Infra.Data/BookShare.Infra.Data.csproj
@@ -55,6 +55,10 @@
     <Compile Include="EntityConfig\LivroConfiguration.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\AutorRepository.cs" />
+    <Compile Include="Repositories\CategoriaRepository.cs" />
+    <Compile Include="Repositories\LivroRepository.cs" />
+    <Compile Include="Repositories\RepositoryBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BookShare.Domain\BookShare.Domain.csproj">
@@ -62,9 +66,7 @@
       <Name>BookShare.Domain</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Repositories\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
