--- a/BookShare.Domain/BookShare.Domain.csproj
+++ b/BookShare.Domain/BookShare.Domain.csproj
@@ -60,6 +60,8 @@
     <Compile Include="Interfaces\Services\ILivroService.cs" />
     <Compile Include="Interfaces\Services\IServiceBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\AutorService.cs" />
+    <Compile Include="Services\CategoriaService.cs" />
     <Compile Include="Services\LivroService.cs" />
     <Compile Include="Services\ServiceBase.cs" />
   </ItemGroup>
