--- a/BookShare.Application/BookShare.Application.csproj
+++ b/BookShare.Application/BookShare.Application.csproj
@@ -48,10 +48,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppServiceBase.cs" />
+    <Compile Include="AutorAppService.cs" />
+    <Compile Include="CategoriaAppService.cs" />
     <Compile Include="Interface\IAppServiceBase.cs" />
     <Compile Include="Interface\IAutorAppService.cs" />
     <Compile Include="Interface\ICategoriaAppService.cs" />
     <Compile Include="Interface\ILivroAppService.cs" />
+    <Compile Include="LivroAppService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
