--- a/BookShare.Domain/BookShare.Domain.csproj
+++ b/BookShare.Domain/BookShare.Domain.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AutorService.cs" />
     <Compile Include="Services\CategoriaService.cs" />
+    <Compile Include="Services\EditoraService.cs" />
     <Compile Include="Services\LivroService.cs" />
     <Compile Include="Services\ServiceBase.cs" />
   </ItemGroup>
