Creating the EditorasController

--- a/BookShare.MVC/BookShare.MVC.csproj
+++ b/BookShare.MVC/BookShare.MVC.csproj
@@ -242,8 +242,9 @@
     <Compile Include="AutoMapper\DomainToViewModelMappingProfile.cs" />
     <Compile Include="AutoMapper\ViewModelToDomainMappingProfile.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\AutorController.cs" />
+    <Compile Include="Controllers\AutoresController.cs" />
     <Compile Include="Controllers\CategoriasController.cs" />
+    <Compile Include="Controllers\EditorasController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LivrosController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -354,6 +355,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Editoras\" />
+    <Folder Include="Views\Editora\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
