--- a/BookShare.MVC/BookShare.MVC.csproj
+++ b/BookShare.MVC/BookShare.MVC.csproj
@@ -266,6 +266,10 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Scripts\cldr.js" />
+    <Content Include="Scripts\cldr\event.js" />
+    <Content Include="Scripts\cldr\supplemental.js" />
+    <Content Include="Scripts\cldr\unresolved.js" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -347,11 +351,11 @@
     <Content Include="Views\Livros\Details.cshtml" />
     <Content Include="Views\Livros\Edit.cshtml" />
     <Content Include="Views\Livros\Delete.cshtml" />
-    <Content Include="Views\Autor\Index.cshtml" />
-    <Content Include="Views\Autor\Create.cshtml" />
-    <Content Include="Views\Autor\Details.cshtml" />
-    <Content Include="Views\Autor\Edit.cshtml" />
-    <Content Include="Views\Autor\Delete.cshtml" />
+    <Content Include="Views\Autores\Index.cshtml" />
+    <Content Include="Views\Autores\Create.cshtml" />
+    <Content Include="Views\Autores\Details.cshtml" />
+    <Content Include="Views\Autores\Edit.cshtml" />
+    <Content Include="Views\Autores\Delete.cshtml" />
     <Content Include="Views\Editoras\Create.cshtml" />
     <Content Include="Views\Editoras\Delete.cshtml" />
     <Content Include="Views\Editoras\Index.cshtml" />
