--- a/BookShare.MVC/BookShare.MVC.csproj
+++ b/BookShare.MVC/BookShare.MVC.csproj
@@ -267,6 +267,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\image\icone.png" />
     <Content Include="Content\image\image-home.jpeg" />
     <Content Include="Content\image\image-login.jpg" />
     <Content Include="Content\image\logo.png" />
