Configuring the Livro Edit View

--- a/BookShare.MVC/Web.config
+++ b/BookShare.MVC/Web.config
@@ -8,8 +8,8 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-   <connectionStrings>
-     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\users-BookShare.mdf;Initial Catalog=aspnet-BookShare.MVC-20170916115918;Integrated Security=True" providerName="System.Data.SqlClient" />
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\users-BookShare.mdf;Initial Catalog=aspnet-BookShare.MVC-20170916115918;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="BookShare" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\BookShare.mdf;Initial Catalog=BookShare;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
@@ -25,6 +25,7 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
+    <globalization uiCulture="pt-BR" culture="pt-BR" />
   </system.web>
   <system.webServer>
     <modules>
